--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
