--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "nuxt": "^2.0.0",
     "vuetify": "^1.5.16"
   },
